<resources>
    <string name="app_name" translatable="false">GymFit</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="action_sign_in_short">Registrati</string>
    <string name="login_email">"Login via Email"</string>
    <string name="login_gym">"Sei una palestra? Registrati"</string>
    <string name="signup">"Registrati"</string>
    <string name="accept_condition">"Continuando accetti termini e condizioni dell'applicazione"</string>
    <string name="subtitle_onBoarding1">Per iniziare, registrati o accedi alla piattaforma per scoprire tutti i vantaggi</string>
    <string name="subtitle_login_page">Compila le informazioni sottostanti per effettuare il login ed accedere al tuo profilo</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="select_gender">Seleziona genere</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="phoneNumber">Numero di telefono</string>
    <string name="signUpTitle">Benvenuto!</string>
    <string name="signUpSubTitle">Avanti, non mollare! Ti invitiamo a compilare i campi con i dati richiesti per poter creare un account</string>
    <string name="repeat_password">Ripeti password</string>
    <string name="next">Successivo</string>
    <string name="previous">Precedente</string>
    <string name="gym_button_calendar">Programmazione orari</string>
    <string name="gym_button_map">Mappa</string>
    <string name="title_activity_gym_profile" translatable="false">GymProfile</string>
    <string name="first_fragment_label" translatable="false">FirstFragment</string>
    <string name="second_fragment_label" translatable="false">SecondFragment</string>
    <string name="signin">Accedi</string>
    <string name="password_hide" translatable="false">******</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error_weak_password">La password deve contenere minimo 6 caratteri</string>
    <string name="error_invalid_email">La email inserita non è valida</string>
    <string name="error_user_exists">Email già utilizzata per un altro utente</string>
    <string name="continueSignUp">Procedi</string>
    <string name="signUpSubTitle2">Inserisci le ultime informazioni con le quali potrai accedere a GymFit</string>
    <string name="signUpTitle2">Ci sei quasi!</string>
    <string name="gym_profile_toolbar_title">Palestra</string>
    <string name="gym_settings_toolbar_title">Impostazioni</string>
    <string name="gym_subs_toolbar_title">Elenco iscritti</string>
    <string name="user_profile_toolbar_title">Utente</string>
    <string name="user_subs_toolbar_title">Prenotazioni</string>
    <string name="user_gyms_toolbar_title">Elenco palestre</string>
    <string name="system_toolbar_search">Cerca</string>
    <string name="system_toolbar_filter">Filtra</string>
    <string name="system_toolbar_edit">Modifica</string>
    <string name="system_toolbar_logout">Esci</string>
    <string name="system_toolbar_help">Aiuto</string>
    <string name="system_tab_list_turns">Lista prenotazioni</string>
    <string name="system_tab_main_turn">Personale</string>
    <string name="system_tab_help_faq" translatable="false">FAQ</string>
    <string name="system_tab_help_about">Ringraziamenti</string>
    <string name="system_nav_title_home" translatable="false">Home</string>
    <string name="system_nav_title_other">Altro</string>
    <string name="system_about_app">Questa applicazione è stata sviluppata per soli scopi istituzionali e dimostrativi. <br/>
        I suoi obietti sono molto chiari, permette alle infrastrutture ginniche di gestire turni, abbonamenti e iscritti.
        Riciprocamente, essa permette agli utenti iscritti di scegliere una palestra, il rispettivo abbonamento e i specifici turni.</string>
    <string-array name="system_developer_name">
         <item name="dev_1">Alessio Toscano</item>
         <item name="dev_2">Caterina Bianca Maggio</item>
         <item name="dev_3">Federico Frari</item>
         <item name="dev_4">Giuseppe Mondelli</item>
    </string-array>
    <string name="title_system_info">Informazioni sull\'app</string>
    <string name="system_device_os_version">Versione del sistema operativo</string>
    <string name="system_app_version">Versione dell\'app</string>
    <string name="system_device_country">Paese</string>
    <string name="system_device_lang">Lingua</string>
    <string name="system_device_conn">Connessione</string>
    <string-array name="system_connection_types">
         <item name="none">None</item>
         <item name="wifi">Wifi</item>
         <item name="ethernet">Ethernet</item>
         <item name="mobile_2G">2G</item>
         <item name="mobile_3G">3G</item>
         <item name="mobile_4G">4G</item>
         <item name="mobile_5G">5G</item>
    </string-array>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="prompt_phone">Numero di telefono</string>
    <string name="prompt_gender_man">Uomo</string>
    <string name="prompt_gender_woman">Donna</string>
    <string name="prompt_gender_other">Altro</string>
    <string name="prompt_address">Indirizzo</string>
    <string name="prompt_cancel">Annulla</string>
    <string name="prompt_send">Invia</string>
    <string name="prompt_delete">Cancella</string>
    <string name="prompt_confirm">Conferma</string>
    <string name="prompt_update">Aggiorna</string>
    <string name="prompt_available">Disponibile</string>
    <string name="prompt_not_available">Non disponibile</string>
    <string name="prompt_subscribe">Iscriviti</string>
    <string name="prompt_book">Prenotati</string>
    <string name="prompt_unbook">Annulla prenotazione</string>
    <string name="prompt_unsubscribe">Disiscriviti</string>
    <string name="prompt_subscribers" translatable="false">subscribers</string>
    <string name="prompt_subscription" translatable="false">subscription</string>
    <string name="prompt_monthly" translatable="false">monthly</string>
    <string name="prompt_quarterly" translatable="false">quarterly</string>
    <string name="prompt_six_month" translatable="false">six_month</string>
    <string name="prompt_annual" translatable="false">annual</string>
    <string name="prompt_turn" translatable="false">turn</string>
    <string name="prompt_morning" translatable="false">morning</string>
    <string name="prompt_afternoon" translatable="false">afternoon</string>
    <string name="prompt_evening" translatable="false">evening</string>
    <string name="prompt_default" translatable="false">default</string>
    <string name="prompt_email_not_found">Attenzione! Email non trovata</string>
    <string name="birthDay">Data di nascita</string>
    <string name="location">Località</string>
    <string name="helper_email_hover">Inserisci una email</string>
    <string name="helper_email_error">"Inserisci una email valida. "</string>
    <string name="helper_psw_hover">Inserisci una password.</string>
    <string name="helper_psw_error">Inserisci una password valida.</string>
    <string name="helper_phone_hover">Inserisci un nuovo numero di telefono</string>
    <string name="helper_phone_error">"Numero di telefono non valido."</string>
    <string name="helper_address_hover">Inserisci un nuovo indirizzo</string>
    <string name="helper_address_error">"L'indirizzo non è valido."</string>
    <string name="helper_name_gym">Gym</string>
    <string name="helper_name_user">User</string>
    <string name="helper_name_hover">Inserisci nome</string>
    <string name="helper_surname_hover">Inserisci cognome</string>
    <string name="helper_gender_hover">Inserisci un sesso</string>
    <string name="helper_address_hover_signUp">Inserisci indirizzo</string>
    <string name="helper_phone_hover_signUp">Inserisci telefono</string>
    <string name="helper_birth_hover">Inserisci data di nascita</string>
    <string name="helper_psw_not_equal_error">Le due password non coincidono</string>
    <string name="password_recovery_title">Recupera Password</string>
    <string name="password_recovery_subtitle">Inserisci sotto la tua email di registrazione per ricevere le istruzioni di recupero password.</string>
    <string name="password_recover_button_send">Invia</string>
    <string name="dialog_title_pickimage">Scegli una azione</string>
    <string name="dialog_item_pickimage_camera">Fotocamera</string>
    <string name="dialog_item_pickimage_gallery">Galleria</string>
    <string name="dialog_title_user_unsubcribe">Disiscrivi utente</string>
    <string name="title_subscription">Abbonamento</string>
    <string name="subscription_available">Abbonamenti disponibili</string>
    <string name="monthly_subscription">Mensile</string>
    <string name="quarterly_subscription">Trimestrale</string>
    <string name="six_month_subscription">Semestrale</string>
    <string name="annual_subscription">Annuale</string>
    <string name="title_session">Turno settimanale</string>
    <string name="turn_available">Turni disponibili</string>
    <string name="morning_session">Turni mattutini</string>
    <string-array name="morning_session_value">
        
        <item name="first_morning_session" translatable="false">09:00 – 10:00</item>
        
        <item name="second_morning_session" translatable="false">10:00 – 11:00</item>
        
        <item name="third_morning_session" translatable="false">11:00 – 12:00</item>
    </string-array>
    <string-array name="morning_session_name">
        
        <item name="first_morning_session" translatable="false">morningFirst</item>
        
        <item name="second_morning_session" translatable="false">morningSecond</item>
        
        <item name="third_morning_session" translatable="false">morningThird</item>
    </string-array>
    <string name="afternoon_session">Turni pomeridiani</string>
    <string-array name="afternoon_session_value">
        
        <item name="first_afternoon_session" translatable="false">14:00 – 15:00</item>
        
        <item name="second_afternoon_session" translatable="false">15:00 – 16:00</item>
        
        <item name="third_afternoon_session" translatable="false">16:00 – 17:00</item>
    </string-array>
    <string-array name="afternoon_session_name">
        
        <item name="first_afternoon_session" translatable="false">afternoonFirst</item>
        
        <item name="second_afternoon_session" translatable="false">afternoonSecond</item>
        
        <item name="third_afternoon_session" translatable="false">afternoonThird</item>
    </string-array>
    <string name="evening_session">Turni serali</string>
    <string-array name="evening_session_value">
        
        <item name="first_evening_session" translatable="false">17:00 – 18:00</item>
        
        <item name="second_evening_session" translatable="false">18:00 – 19:00</item>
        
        <item name="third_evening_session" translatable="false">19:00 – 20:00</item>
    </string-array>
    <string name="subscription_filter">Filtra per abbonamento</string>
    <string name="gyms_filter">Filtra per distanza</string>
    <string name="user_sort">Ordina per</string>
    <string name="filter_by_distance_10" translatable="false">10 Km</string>
    <string name="dont_have_account_gym">Sei una palestra?</string>
    <string name="create_account_gym">Registrati</string>
    <string name="dont_have_account_user">Non hai un account?</string>
    <string name="create_account_user">Crealo</string>
</resources>