<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_gym_profile">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/ic_account"
            android:title="@string/gym_profile_toolbar_title" />
        <item
            android:id="@+id/nav_menu_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/gym_settings_toolbar_title" />
        <item
            android:id="@+id/nav_menu_subs"
            android:icon="@drawable/ic_subscription"
            android:title="@string/gym_subs_toolbar_title" />
    </group>
    <item android:title="@string/system_nav_title_other">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_menu_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/system_toolbar_help" />
                <item
                    android:id="@+id/nav_menu_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/system_toolbar_logout" />
            </group>
        </menu>
    </item>
</menu>