<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/system_toolbar_search"
        app:actionViewClass="android.widget.SearchView"
        app:iconTint="@color/tint_image_icon_dark"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/ic_filter"
        app:iconTint="@color/tint_image_icon_dark"
        app:showAsAction="always"
        android:title="@string/system_toolbar_filter">

        <menu>
            <group>
                <item
                    android:title="@string/gyms_filter"
                    app:showAsAction="never">

                    <menu>
                        <group>
                            <item android:id="@+id/action_filter_10"
                                android:title="@string/filter_by_distance_10"
                                app:showAsAction="never" />
                            <item android:id="@+id/action_filter_20"
                                android:title="@string/filter_by_distance_10"
                                app:showAsAction="never" />
                            <item android:id="@+id/action_filter_50"
                                android:title="@string/filter_by_distance_10"
                                app:showAsAction="never" />
                        </group>
                    </menu>
                </item>
                <item
                    android:title="@string/user_sort"
                    app:showAsAction="never">

                    <menu>
                        <group>
                            <item android:id="@+id/action_sort_by_name"
                                android:title="@string/prompt_name"
                                app:showAsAction="never" />
                        </group>
                    </menu>
                </item>
            </group>
        </menu>
    </item>

</menu>