<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu_home"
            android:title="Profilo"
            android:icon="@drawable/ic_account" />
        <item android:id="@+id/nav_menu_setting"
            android:title="Prenotazioni"
            android:icon="@drawable/ic_setting" />
        <item android:id="@+id/nav_menu_subs"
            android:title="Elenco palestre"
            android:icon="@drawable/ic_subscription" />
    </group>
    <item android:title="@string/system_nav_title_other">
        <menu>
            <group>
                <item android:id="@+id/nav_menu_help"
                    android:title="@string/system_toolbar_help"
                    android:icon="@drawable/ic_setting" />
                <item android:id="@+id/nav_menu_logout"
                    android:title="@string/system_toolbar_logout"
                    android:icon="@drawable/ic_logout" />
            </group>
        </menu>
    </item>
</menu>