<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.signup.SignUpFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/avenirheavy"
        android:textColor="@color/colorPrimary"
        android:text="@string/signUpTitle"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/avenirltstdlight"
        android:text="@string/signUpSubTitle"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/avenirltstdlight"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtSurnameSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:textColorHint="@color/stringColor"
        android:fontFamily="@font/avenirltstdlight"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:autofillHints="Prova"
        android:background="@drawable/et_custom"
        android:textColorHint="@color/stringColor"
        android:textSize="18sp"
        android:fontFamily="@font/avenirltstdlight"
        android:spinnerMode="dropdown"
        android:prompt="@string/select_gender"
        />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:textColorHint="@color/stringColor"
        android:fontFamily="@font/avenirltstdlight"
        android:hint="@string/phoneNumber"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="18sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/avenirltstdlight"
            android:text="Swipe per continuare"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>